# ulog

./: .gitignore  CMakeLists.txt  README.md  build-helper.bat  conanfile.py  conanfile.txt
.github/workflows/: ci.yml
bench/: CMakeLists.txt  async_throughput_bench.cpp  default_logger_bench.cpp  formatter_bench.cpp  latency_bench.cpp  multi_producer_bench.cpp  payload_bench.cpp  slow_sink_bench.cpp  spdlog_compare_bench.cpp  sync_throughput_bench.cpp
ci/: tsan.supp
cmake/: ulog-config.cmake.in
docs/: BACKLOG.md  Doxyfile  extraction-plan.md
docs/review/: 01-phases-0-11.md  02-phase-12.md  03-phase-13.md  04-phase-14.md  05-phase-15.md  06-phase-16.md  07-phase-17.md  08-phase-18.md  09-phase-19.md  10-phase-20.md  11-phase-21.md  12-phase-22.md  13-phase-23.md  14-phase-24.md  15-phase-25.md  16-phase-27.md  17-phase-26.md  18-phase-28.md  19-phase-29.md  20-phase-30.md  21-phase-31.md  22-phase-32.md  23-phase-33.md  24-phase-34.md  25-phase-35.md  26-phase-36.md  27-phase-37.md  28-phase-38.md  29-phase-39.md  30-phase-40.md  31-phase-41.md  32-phase-42.md  33-phase-43.md  34-phase-44.md  35-phase-45.md  36-phase-46-deferral.md  37-phase-47.md  38-phase-48.md  39-phase-49.md
examples/: CMakeLists.txt
examples/async_file/: main.cpp
examples/custom_sink/: main.cpp
examples/json_consumer/: main.cpp
examples/otlp_http/: main.cpp
examples/otlp_json/: main.cpp
examples/simple/: main.cpp
examples/tracing_hook/: main.cpp
include/ulog/: async_logger.hpp  config.hpp  dynamic_debug.hpp  format.hpp  fwd.hpp  json_string.hpp  level.hpp  log.hpp  log_extra.hpp  log_helper.hpp  log_helper_extras.hpp  log_helper_range.hpp  log_record_location.hpp  mem_logger.hpp  null_logger.hpp  record_enricher.hpp  stacktrace_cache.hpp  sync_logger.hpp  tracing_hook.hpp
include/ulog/detail/: file_handle.hpp  flags.hpp  range_traits.hpp  small_string.hpp  socket.hpp  source_root.hpp  timestamp.hpp  tskv_escape.hpp
include/ulog/impl/: logger_base.hpp  rate_limit.hpp  tag_writer.hpp
include/ulog/impl/formatters/: base.hpp  json.hpp  ltsv.hpp  otlp_json.hpp  raw.hpp  text_item.hpp  tskv.hpp
include/ulog/posix/: sigusr1_handler.hpp
include/ulog/sinks/: base_sink.hpp  fd_sink.hpp  file_sink.hpp  instrumented_sink.hpp  null_sink.hpp  otlp_batch_sink.hpp  sink_stats.hpp  structured_sink.hpp  tcp_socket_sink.hpp  unix_socket_sink.hpp
include/ulog/utils/: underlying_value.hpp
include/ulog/win/: named_event_handler.hpp
packaging/conancenter/: README.md
packaging/conancenter/recipes/ulog/all/: conandata.yml  conanfile.py
packaging/conancenter/recipes/ulog/all/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
scripts/: bench_from_ci.py
src/: CMakeLists.txt  async_logger.cpp  config.cpp  dynamic_debug.cpp  format.cpp  json_string.cpp  level.cpp  log.cpp  log_extra.cpp  log_helper.cpp  null_logger.cpp  rate_limit.cpp  record_enricher.cpp  stacktrace_cache.cpp  sync_logger.cpp  tracing_hook.cpp
src/detail/: file_handle.cpp  socket.cpp  timestamp.cpp
src/impl/: logger_base.cpp  tag_writer.cpp
src/impl/formatters/: json.cpp  ltsv.cpp  otlp_json.cpp  raw.cpp  text_item_pool.cpp  tskv.cpp
src/posix/: sigusr1_handler.cpp
src/sinks/: fd_sink.cpp  file_sink.cpp  instrumented_sink.cpp  otlp_batch_sink.cpp  tcp_socket_sink.cpp  unix_socket_sink.cpp
src/win/: named_event_handler.cpp
tests/: CMakeLists.txt  async_logger_test.cpp  config_test.cpp  default_logger_test.cpp  dynamic_debug_test.cpp  format_test.cpp  formatter_test.cpp  instrumented_sink_test.cpp  level_test.cpp  log_extra_test.cpp  log_helper_niceties_test.cpp  log_helper_noexcept_test.cpp  log_helper_range_test.cpp  log_helper_streaming_parity_test.cpp  log_helper_truncation_test.cpp  log_macros_test.cpp  log_record_location_test.cpp  named_event_reopen_test.cpp  otlp_batch_sink_test.cpp  per_logger_common_tags_test.cpp  per_sink_format_test.cpp  rate_limit_test.cpp  record_enricher_test.cpp  sink_test.cpp  stacktrace_cache_test.cpp  structured_sink_test.cpp  tcp_sink_test.cpp  tracing_hook_test.cpp  tskv_escape_test.cpp  unix_sink_test.cpp
